# cppb

./: CMakeLists.txt  README.md  meson.build  wercker.yml
include/: dog.h
src/: dog.cpp  main.cpp  meson.build
test/: meson.build  test.cpp
